--- a/_sass/base/components/_sections.scss
+++ b/_sass/base/components/_sections.scss
@@ -11,6 +11,10 @@
   margin-bottom: $base-padding;
 }
 
+.section-margin_top {
+  margin-top: $base-padding;
+}
+
 .section-card_container {
 
   h1 {
